 - use obspy read_inventory() and Inventory/Response objects internally for
   all metadata, regardless of source (see #77)
 - reimplement AR picker (see #75)
 - make reference time given on command line the zero-time on time axis always
   (so far if an offset was given the zero time was equal to reference time
   plus offset, see #78)

0.5.1
 - fix getting metadata via arclink (see #65)
 - make it possible to set default filter corners via config file (see #66)
 - enable parallel event upload/replacement/deletion on seishub and jane
   (see #67)
 - fix Qt application Window icon (see #68)

0.5.0
 - add support for magnitude estimation for data fetched from an FDSN server
   (using full response)
 - depending on obspy >=1.1.0 now
 - add support for scrolling along time axis with mouse wheel + modifier
   (by default "alt" key, see #45)
 - fix station metadata output in hypo71 format (for location routines)
   for longitude <0 (see #47)
 - fix horizontal errors read after hyp2000 location (conversion from km to m
   was missing, see #48)
 - add possibility to use other phase names besides the default "P" and "S" in
   picking. this is highly experimental, especially when using location
   routines most internals are very likely still using hard coded "P" and "S"
   values, but for picking and saving to QuakeML only this reportedly works
   (see #36).
 - also show picks in the GUI that lack location code in the corresponding
   QuakeML file (but such picks will not be associated to any one of the
   Stream's axes, so it will not be possible to modify or delete them via the
   GUI, see #49 and #51)

0.4.1
 - fix minor bug that prevents 0.4.0 from running
 - switch obspy dependency version from >=1.* to >1.0.3 (the import reroutes in
   obspy 1.0.x break the monkey patching of event object classes in obspyck)

0.4.0
 - add support for fetching data from a seedlink server
 - set meaningful creation info including obspyck+obspy version numbers on all
   event objects